# examen-25

.github/workflows/: rust.yml
ci-cd/: CE_QUE_JAI_UTILISE.md  Dockerfile
ci-cd/models/starwars/: Cargo.toml
ci-cd/server/: Cargo.toml
ci-cd/server/src/: main.rs
collab-project/: POUR_LE_RUN.md
collab-project/client/: angular.json  package-lock.json  package.json
collab-project/client/src/: server.ts  styles.scss
collab-project/client/src/app/: app.component.ts  app.routes.ts
collab-project/client/src/app/pages/entry-page/: entry-page.component.html  entry-page.component.spec.ts  entry-page.component.ts
collab-project/client/src/app/pages/more-info/: more-info.component.spec.ts  more-info.component.ts
collab-project/server/: package-lock.json  package.json
collab-project/server/prisma/: schema.prisma
collab-project/server/prisma/migrations/20250123235314_init/: migration.sql
collab-project/server/prisma/migrations/20250124001645_pluriel/: migration.sql
collab-project/server/src/controllers/: lego.controller.ts  sets.controller.ts
collab-project/server/src/routes/: index.ts  lego.routes.ts  set.routes.ts
data-engineering/: main.ipynb
