[package]
name = "axum-starwars"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
starwars = { path = "../../ci-cd/models/starwars" }
axum = { version = "0.8.1" }
async-graphql = "7.0.14"
async-graphql-axum = "7.0.14"
serde_json = "1.0.137"
serde = "1.0.217"
